# ai-invention-6488ab-typological-predictors-of-dependency-dis

./: README.md
chat/: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_png.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  data.py  data_out_preview.json  pyproject.toml
round-1/dataset-2/: README.md
round-1/dataset-2/demo/: data_code_demo.ipynb
round-1/dataset-2/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  README.md  data.py  full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml  wals_ud_mapping.json  wals_ud_mapping_mini.json  wals_ud_mapping_preview.json
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json  research_out_test.json  write_research_json.py
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  RESULTS_SUMMARY.md  full_method_out.json  method.py  preview_method_out.json  pyproject.toml
(+48 files in other folders)
