[project]
name = "wals-ud-mapping-dataset"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "pandas==3.0.3",
    "requests==2.34.2",
    "langcodes==3.5.1",
    "pycountry==26.2.16",
    "tqdm==4.69.0",
    "numpy==2.5.1",
    "python-dateutil==2.9.0.post0",
    "pyarrow==25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
